# swagger-output.json
@@ -936,6 +936,57 @@
         }
       }
     },
+    "/assets/assets_detail": {
+      "get": {
+        "tags": [
+          "Asset"
+        ],
+        "summary": "Danh sách các loại tài sản mà chi tiết hơn chút",
+        "description": "Xem danh sách các loại tài sản có tại hệ thống có thể dùng cho chức năng tìm theo mã các loại tài sản.",
+        "parameters": [
+          {
+            "name": "asset_type_code",
+            "in": "query",
+            "description": "Mã của loại tài sản, có thể bỏ trống sẽ là lấy tất cả.",
+            "type": "string"
+          },
+          {
+            "name": "asset_code",
+            "in": "query",
+            "description": "Mã của tài sản, có thể bỏ trống sẽ là lấy tất cả.",
+            "type": "string"
+          },
+          {
+            "name": "customer_code",
+            "in": "query",
+            "description": "Mã của khách hàng, có thể bỏ trống sẽ là lấy tất cả.",
+            "type": "string"
+          },
+          {
+            "name": "pageNumber",
+            "in": "query",
+            "description": "Số trang để phân trang. Nếu không được cung cấp, giá trị mặc định và số trang bắt đầu từ 1.",
+            "default": 1,
+            "type": "integer"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "description": "Kích thước của một trang. Nếu không được cung cấp, giá trị mặc định là  20.",
+            "default": 20,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/user/vocatives": {
       "get": {
         "tags": [
